<resources>
    <string name="app_name">Scientific Calculator</string>

    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>

    <string name="percentage">%</string>
    <string name="root">√</string>
    <string name="square">x²</string>
    <string name="fraction">1/x</string>
    <string name="cube">x³</string>

    <string name="degree">xⁿ</string>
    <string name="exponent_degree">eⁿ</string>
    <string name="exponent">e</string>
    <string name="ten">10ⁿ</string>
    <string name="ln">ln</string>
    <string name="rootCube">∛</string>
    <string name="rootN">ⁿ√</string>
    <string name="factorial">x!</string>
    <string name="logTen">log₁₀</string>

    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="division">÷</string>
    <string name="plus_minus">±</string>
    <string name="comma">,</string>
    <string name="equal">＝</string>
    <string name="addition">+</string>
    <string name="subtraction">−</string>
    <string name="multiplication">*</string>
    <string name="bracket1">(</string>
    <string name="bracket2">)</string>

    <string name="value_9">9</string>
    <string name="value_8">8</string>
    <string name="value_7">7</string>
    <string name="value_6">6</string>
    <string name="value_5">5</string>
    <string name="value_4">4</string>
    <string name="value_3">3</string>
    <string name="value_2">2</string>
    <string name="value_1">1</string>
    <string name="value_0">0</string>

    <string name="menu_item_history">History</string>

    <string name="history">History: </string>
    <string name="clear_history">Clear history</string>
    <string name="history_result">"History result: "</string>
    <string name="no_history">"There's no history yet."</string>
    <string name="history_cleared">History cleared</string>

    <string name="memory_cleared_toast">Memory cleared</string>
    <string name="memory_recalled_toast">Memory recalled</string>
    <string name="memory_added_toast">"Memory added: "</string>
    <string name="memory_subtracted_toast">"Memory subtracted: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>

</resources>