<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCalculatorButtonNumber"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <GridLayout
        android:id="@+id/gridlayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2D2F31"
        android:columnCount="5"
        android:rowCount="1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1"
        tools:targetApi="jelly_bean_mr2">

        <Button
            android:id="@+id/btn_memory_clear"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/memory_clear"
            app:backgroundTint="@color/colorCalculatorButtonMemory"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_memory_recall"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/memory_recall"
            app:backgroundTint="@color/colorCalculatorButtonMemory"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_memory_add"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/memory_add"
            app:backgroundTint="@color/colorCalculatorButtonMemory"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_memory_subtract"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/memory_subtract"
            app:backgroundTint="@color/colorCalculatorButtonMemory"
            tools:targetApi="lollipop" />

    </GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <GridLayout
        android:id="@+id/gridlayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cardview_dark_background"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <Button
            android:id="@+id/btn_plus_minus"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/plus_minus"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_c"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/c"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_backspace"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/backspace"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_division"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/division"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_7"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/value_7"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_8"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_8"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_9"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/value_9"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_multiplication"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/multiplication"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_4"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/value_4"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_5"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_5"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_6"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/value_6"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_subtraction"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/subtraction"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_1"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/value_1"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_2"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/value_2"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_3"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/value_3"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_addition"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/addition"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_0"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/value_0"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_comma"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/comma"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonNumber"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_equal"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/equal"
            android:onClick="onClick"
            app:backgroundTint="@color/colorCalculatorButtonAction"
            tools:targetApi="lollipop" />

    </GridLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/gridlayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/number_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="bottom|end"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorCalculatorButtonsArea"
            tools:textView="9 + 2 - 1 × " />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/number_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="end"
            android:text="@string/value_0"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            app:autoSizeTextType="uniform"
            tools:textView="10" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>